--- a/contact.html
+++ b/contact.html
@@ -21,7 +21,7 @@
             </div>
             
             <ul class="nav-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="work_experience.html">Work Experience</a></li>
                 <li><a href="blog.html">Blog</a></li>
